@@ -238,6 +238,14 @@ Image::Checkerboard - Image generator for checkboards.
  # Output:
  # bmp
 
+=begin html
+
+<a href="https://raw.githubusercontent.com/tupinek/Image-Checkerboard/master/images/ex1.png">
+  <img src="https://raw.githubusercontent.com/tupinek/Image-Checkerboard/master/images/ex1.png" alt="Generated image" width="300px" height="300px" />
+</a>
+
+=end html
+
 =head1 DEPENDENCIES
 
 L<Class::Utils>,
