@@ -1,6 +1,7 @@
 Changes
 Checkerboard.pm
 examples/ex1.pl
+images/ex1.png
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
