@@ -1,4 +1,5 @@
 0.02
+ - Add output image for EXAMPLE section in doc to html doc.
  - Improve LICENSE AND COPYRIGHT section in doc.
 
 0.01 2014-11-15T02:15:10+01:00
